fix(header): profile icon was not visible

--- a/src/components/views/header/Header.module.scss
+++ b/src/components/views/header/Header.module.scss
@@ -94,13 +94,6 @@
           background-color: rgba(162, 27, 251, 0.1);
         }
 
-        .iconContainer {
-          img {
-            filter: brightness(0) saturate(100%) invert(100%) sepia(22%) saturate(241%) hue-rotate(245deg)
-              brightness(114%) contrast(90%);
-          }
-        }
-
         p {
           @include text('boldFont', 16px, $white);
         }
@@ -118,8 +111,11 @@
 
         img {
           align-self: center;
-          filter: brightness(0) saturate(100%) invert(62%) sepia(10%) saturate(124%) hue-rotate(202deg) brightness(90%)
-            contrast(81%);
+
+          &.dulled {
+            filter: brightness(0) saturate(100%) invert(62%) sepia(10%) saturate(124%) hue-rotate(202deg)
+              brightness(90%) contrast(81%);
+          }
         }
 
         .profileVisibility {
